[package]
name = "dusk"
version = "0.3.2"
edition = "2021"
description = "Compiler for the dusk language — targets textual LLVM IR"
license = "MIT OR Apache-2.0"

[lib]
name = "dusk"
path = "src/lib.rs"

[[bin]]
name = "dusk"
path = "src/main.rs"

[[bin]]
name = "dawn"
path = "src/bin/dawn.rs"

# Zero dependencies: the compiler is self contained and builds fully offline.
# dawn shells out to the system `git` to fetch packages.
[dependencies]

[profile.release]
opt-level = 3
lto = true
