[package]
name = "dusk-lang"
version = "0.8.3"
edition = "2021"
description = "Compiler for the dusk programming language, a systems language with generational memory safety, emitting textual LLVM IR"
license = "MIT OR Apache-2.0"
repository = "https://github.com/choice404/dusk"
readme = "README.md"
keywords = ["compiler", "language", "llvm", "systems"]
categories = ["compilers", "development-tools"]

[lib]
name = "dusk"
path = "src/lib.rs"

[[bin]]
name = "dusk"
path = "src/main.rs"

[[bin]]
name = "dawn"
path = "src/bin/dawn.rs"

# Zero dependencies: the compiler is self contained and builds fully offline.
# dawn shells out to the system `git` to fetch packages.
[dependencies]

[profile.release]
opt-level = 3
lto = true
